Import of SAMV/Dowse-BadSSH-0.06 from CPAN.
gitpan-cpan-distribution: Dowse-BadSSH
gitpan-cpan-version:      0.06
gitpan-cpan-path:         SAMV/Dowse-BadSSH-0.06.tar.gz
gitpan-cpan-author:       SAMV
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 
+Version 0.06:
+   - Fix statistics display - was always showing 0 weak keys found
+
 Version 0.05:
    - Protect from a usage error
    - check for the proper ssh host filename
