--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 
+Version 0.07:
+   - the script wasn't warning about the wrong two combinations of
+     1024-bit, 2048-bit, rsa and dsa.  Warn for all of them.  This
+     is really a FIXME: add a blacklist for these combinations.
+
 Version 0.06:
    - Fix statistics display - was always showing 0 weak keys found
 
